# prefix-crab

./: .dockerignore  .env.template  Cargo.toml  Dockerfile  LICENSE.txt  Makefile  README.md  TESTING-LOCAL-SETUP.md  blocklist-example.txt  confidence_threshold.ods  docker-compose.yaml  scan-oneoff.sh
aggregator/: Cargo.toml  Dockerfile  diesel.toml
aggregator/migrations/2023-07-02-191026_prefix_tree_init/: down.sql  up.sql
aggregator/migrations/2023-07-11-143922_response_store/: down.sql  up.sql
aggregator/migrations/2023-07-13-134947_split_analysis/: down.sql  up.sql
aggregator/migrations/2023-07-22-161415_measurement_tree/: up.sql
aggregator/migrations/2023-07-22-161415_prefix_lhr/: down.sql  up.sql
aggregator/src/: analyse.rs  handle_probe.rs  main.rs  measurement_tree.rs  model.rs  models.rs  observe.rs  persist.rs  rabbit.rs  schedule.rs  schema.rs  test_utils.rs
aggregator/src/analyse/: context.rs  echo.rs  map64.rs  model.rs  persist.rs  result.rs  split.rs  store.rs  trace.rs
aggregator/src/analyse/echo/: persist.rs  process.rs  result.rs  store.rs
aggregator/src/analyse/model/: analysis.rs  details.rs  interpretation.rs  measurement_forest.rs  measurement_tree.rs  split.rs
aggregator/src/analyse/split/: collapse.rs  confidence.rs  merge_redundant.rs  persist.rs  recommend.rs  subnet.rs
aggregator/src/handle_probe/: archive.rs  context.rs  echo.rs  interpret.rs  store.rs  trace.rs
aggregator/src/models/: analysis.rs  path.rs  prefix_tree.rs  tree.rs
aggregator/src/models/prefix_tree/: data.rs  path.rs
aggregator/src/persist/: connect.rs  conversions.rs  dsl.rs  loader.rs  macros.rs  schema.rs
aggregator/src/persist/conversions/: path.rs
aggregator/src/prefix_tree/: context.rs  model.rs
aggregator/src/rabbit/: receive.rs  send.rs
aggregator/src/schedule/: analysis_timer.rs  follow_up.rs
aggregator/src/schedule/analysis_timer/: as_budget.rs  class_budget.rs
crab-tools/: Cargo.toml  Dockerfile  target
crab-tools/src/: commands.rs  main.rs  rabbit.rs
crab-tools/src/commands/: edge_analyse.rs  hit_count.rs  prefix_inspect.rs  prefix_scan.rs  rate_calculate.rs  test_metrics.rs  tree_compare.rs  uniform_merge.rs
crab-tools/src/commands/prefix_inspect/: app.rs  business.rs  components.rs  detail.rs  leaves.rs
crab-tools/src/commands/prefix_inspect/components/: status_bar.rs  viewport.rs
crab-tools/src/commands/prefix_inspect/detail/: component.rs  model.rs
crab-tools/src/commands/prefix_inspect/leaves/: component.rs  model.rs
db-model/: Cargo.toml  build.rs
db-model/migrations/2023-07-02-191026_prefix_tree_init/: down.sql  up.sql
db-model/migrations/2023-07-11-143922_response_archive/: up.sql
db-model/migrations/2023-07-13-134947_split_analysis/: down.sql  up.sql
db-model/migrations/2023-08-06-192523_fix_diesel_update_tz/: down.sql  up.sql
db-model/migrations/2023-09-15-142726_add_as_info/: down.sql  up.sql
db-model/migrations/2023-11-05-143439_add_blocked_leaf/: down.sql  up.sql
db-model/migrations/2023-12-26-171127_add_ratio/: up.sql
db-model/migrations/2024-01-09-001852_add_md5_of_LHRs/: down.sql  up.sql
db-model/migrations/2024-01-17-010518_add_asn_to_tree/: down.sql  up.sql
db-model/migrations/2024-01-23-233203_add_same_many/: up.sql
db-model/src/: analyse.rs  lib.rs  persist.rs  prefix_tree.rs  schema.rs  test_utils.rs
db-model/src/analyse/: analysis.rs  forest.rs  map64.rs  subnet.rs  tree.rs
db-model/src/persist/: connect.rs  dsl.rs  error.rs  loader.rs  macros.rs
db-model/src/prefix_tree/: context.rs  model.rs
deploy/: .gitignore  DEPLOY.md  bare-metal.env  build-img.sh  containers.env  gen-systemd.sh  postgresql.conf  push-bins.sh  push-img.sh  rabbitmq.conf  run-with-rmq-pw.sh  shared.env  tools.sh  yarrp-evaluator.env
deploy/eval/: postgres.service  postgresql.conf
deploy/hetzner-testbed/: cloud-init.yml
deploy/observability-stack/: otlp-ingress.yaml
deploy/units/: aggregator.service  aggregator2.service  aggregator3.service  aggregator4.service  aggregator5.service  postgres.service  prefix-crab-aggregator.service  prefix-crab-aggregator2.service  prefix-crab-aggregator3.service  prefix-crab-postgres.service  prefix-crab-rabbitmq.service  prefix-crab-seed-guard.service  prefix-crab-yarrp-buddy.service  prefix-crab-zmap-buddy.service  rabbitmq.service  seed-guard.service  yarrp-buddy.service  zmap-buddy.service
evaluation/: README.md
evaluation/grafana/: prefix-crab.dashboard.json
evaluation/rstats/: b2_confidence.R  e_flappy_analyses.R  f_tree_compare.R  g_university_check.R  hitcounts.R
evaluation/sql/: pfxc-eval-a.sql  pfxc-eval-b.sql  pfxc-eval-c.sql  pfxc-eval-d.sql
queue-models/: Cargo.toml  EXAMPLES.md
queue-models/src/: echo_response.rs  lib.rs  probe_request.rs  probe_response.rs
seed-guard/: .gitignore  Cargo.toml  Dockerfile
seed-guard/austrian-as/: README.md  all_austrian_as.csv  filtered_austria_as.csv  filtered_austria_as.ods  requirements.txt  scrape.py
seed-guard/local-fake-asn-ip/as/64511/: ipv6-aggregated.txt
seed-guard/src/: as_changeset.rs  as_filter_list.rs  as_set.rs  main.rs  schedule.rs  tree_update.rs
src/: blocklist.rs  confidence_threshold.rs  error.rs  helpers.rs  lib.rs  main.rs  prefix_split.rs  test_utils.rs
src/helpers/: bootstrap.rs  ip.rs  logging.rs  loop_recv_with_stop.rs  loop_with_stop.rs  rabbit.rs  signal_handler.rs  stop.rs
yarrp-buddy/: Cargo.toml  README.md  yarrp-gitignore.patch
yarrp-evaluator/: Cargo.toml  README.md
zmap-buddy/: Cargo.toml  README.md
zmap-buddy/src/: cmd_logic.rs  main.rs  prefix_split.rs  probe_store.rs  rabbit.rs  schedule.rs  zmap_call.rs
zmap-buddy/src/cmd_logic/: one_shot.rs  prefix_scan.rs  rabbitmq_listen.rs
zmap-buddy/src/cmd_logic/rabbitmq_listen/: rabbit_receiver.rs  zmap_queue.rs  zmap_scheduler.rs
zmap-buddy/src/probe_store/: dispatch.rs  model.rs  prefix.rs  subnet.rs  test_utils.rs
zmap-buddy/src/rabbit/: prepare.rs  receive.rs  send.rs
zmap-buddy/src/schedule/: interleave.rs  model.rs  task.rs
zmap-buddy/src/zmap_call/: caller.rs  targets.rs
(+41 files in other folders)
