[workspace]
members = [
    "zmap-buddy",
    "yarrp-buddy",
    "queue-models",
    "aggregator",
    "seed-guard",
    "db-model",
    "crab-tools",
]

    [workspace.package]
    version      = "0.1.0"
    edition      = "2021"
    authors      = ["Philipp Nowak <prefixcrab@phnowak.eu>"]
    license      = "MIT"
    rust-version = "1.67.1"                                  # flexi_logger

    [workspace.dependencies]
    amqprs = { version = "1.2.0", features = ["traces", "urispec"] }
    # To enable backtrace printing, set RUST_BACKTRACE=1 (see anyhow docs)
    anyhow = { version = "1.0.68", features = ["backtrace"] }
    clap = { version = "4.2", features = ["derive", "unicode", "env"] }
    clap-verbosity-flag = "2.0.0"
    flexi_logger = { version = "0.27.3", features = ["specfile", "async"] }
    human-panic = "1.1.0"
    serde = { version = "1.0.159", features = ["derive"] }
    log = "0.4.17"
    ipnet = { version = "2.7.1", features = ["serde"] }
    serde_json = "1.0.96"
    tokio = { version = "1.27.0", features = ["full"] }
    tokio-util = { version = "0.7.8" }
    futures = "0.3.28"
    futures-util = "0.3.28"
    async-trait = "0.1.68" # https://github.com/rust-lang/rust/issues/91611
    dotenvy = { version = "0.15.7" }
    rand = "0.8.5"
    assertor = "0.0.2"
    type-safe-id = { version = "0.2.1", features = ["serde"] }
    chrono = { version = "0.4.29" }
    diesel = { version = "2.1.4", features = [
        "postgres",
        "serde_json",
        "chrono",
        "ipnet-address",
        "uuid",
    ] }
    diesel_migrations = { version = "2.1.0", features = ["postgres"] }
    diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
    itertools = "0.12.0"
    thiserror = "1.0.50"
    uuid = "1.6.1" # note that this must be kept in sync with Diesel's uuid dependency

    # CRITICAL: Keep opentelemetry versions synched to each other, else it won't work
    # ref: https://github.com/open-telemetry/opentelemetry-rust/blob/main/opentelemetry-otlp/Cargo.toml
    # NOTE: Still patched below
    opentelemetry = { version = "0.21", features = [
        "metrics",
        "otel_unstable", # gauges apparently
    ] }
    opentelemetry-otlp = { version = "0.14.0", features = [
        "http-proto",
        "reqwest-client",
    ] }
    opentelemetry_sdk = { version = "0.21", features = ["rt-tokio", "metrics"] }
    strum = { version = "0.26", features = ["derive"] }


[package]
name                   = "prefix-crab"
description            = "Friendly multi-binary crab that inspects IPv6 prefixes to reveal all their secrets"
version.workspace      = true
edition.workspace      = true
authors.workspace      = true
license.workspace      = true
rust-version.workspace = true

[dependencies]
amqprs              = { workspace = true }
clap                = { workspace = true }
clap-verbosity-flag = { workspace = true }
anyhow              = { workspace = true }
flexi_logger        = { workspace = true }
log                 = { workspace = true }
human-panic         = { workspace = true }
tokio               = { workspace = true }
serde               = { workspace = true }
serde_json          = { workspace = true }
async-trait         = { workspace = true }
dotenvy             = { workspace = true }
rand                = { workspace = true }
ipnet               = { workspace = true }
assertor            = { workspace = true }
chrono              = { workspace = true }
tokio-util          = { workspace = true }
itertools           = { workspace = true }
thiserror           = { workspace = true }
nix                 = { version = "0.27", features = ["signal"] }


# TODO - It seems like OTLP metrics exports via HTTP only actually do something with this speciciation
# It's not a code change, both the main branch and the latest release commit (0.21.2) work; just not
# the released versions from crates.io. Might be some weird interoperation issue where the compiler
# thinks it's two different versions of the crate, but it really doesn't look like it.
# Forked to ensure that we don't get surprised by upstream updates
#
# Local path dependency also works
[patch.crates-io]
opentelemetry_sdk  = { git = "https://github.com/literalplus/opentelemetry-rust" }
opentelemetry      = { git = "https://github.com/literalplus/opentelemetry-rust" }
opentelemetry-otlp = { git = "https://github.com/literalplus/opentelemetry-rust" }
