[package]
name                   = "aggregator"
description            = "Aggregates prefix information from various sources into a persistent tree"
version.workspace      = true
edition.workspace      = true
authors.workspace      = true
license.workspace      = true
rust-version.workspace = true

[dependencies]
amqprs              = { version = "1.2.0", features = ["traces", "urispec"] }
anyhow              = { workspace = true }
assertor            = "0.0.2"
clap                = { workspace = true }
clap-verbosity-flag = { workspace = true }
flexi_logger        = { workspace = true }
futures             = { workspace = true }
futures-util        = { workspace = true }
human-panic         = { workspace = true }
ipnet               = { workspace = true }
log                 = { workspace = true }
prefix-crab         = { path = ".." }
serde               = { workspace = true }
serde_json          = { workspace = true }
tokio               = { workspace = true }
tokio-util          = { workspace = true }
queue-models        = { path = "../queue-models" }
db-model            = { path = "../db-model" }
async-trait         = { workspace = true }
type-safe-id        = { workspace = true }
diesel              = { workspace = true }
diesel_migrations   = { workspace = true }
diesel-derive-enum  = { workspace = true }
itertools           = { workspace = true }
thiserror           = { workspace = true }
bitvec              = "1.0.1"
chrono              = "0.4.26"
nohash-hasher       = "0.2.0"
rand                = "0.8.5"
opentelemetry       = { workspace = true }
opentelemetry-otlp  = { workspace = true }
opentelemetry_sdk   = { workspace = true }
lazy_static         = "1.4.0"
strum              = { workspace = true }
