[package]
name                   = "crab-tools"
description            = "Various command-line tools to manage prefix-crab. https://en.wikipedia.org/wiki/Cow_tools"
version.workspace      = true
edition.workspace      = true
authors.workspace      = true
license.workspace      = true
rust-version.workspace = true

[dependencies]
amqprs                = { version = "1.2.0", features = ["traces", "urispec"] }
anyhow                = { workspace = true }
assertor              = "0.0.2"
clap                  = { workspace = true }
clap-verbosity-flag   = { workspace = true }
flexi_logger          = { workspace = true }
human-panic           = { workspace = true }
ipnet                 = { workspace = true }
log                   = { workspace = true }
prefix-crab           = { path = ".." }
serde                 = { workspace = true }
serde_json            = { workspace = true }
queue-models          = { path = "../queue-models" }
db-model              = { path = "../db-model" }
async-trait           = { workspace = true }
type-safe-id          = { workspace = true }
diesel                = { workspace = true }
diesel-derive-enum    = { workspace = true }
tokio                 = { workspace = true }
futures               = { workspace = true }
chrono                = "0.4.26"
itertools             = "0.12.0"
tuirealm              = "1.9.1"
tui-realm-stdlib      = "1.3.0"
thiserror             = { workspace = true }
lazy_static           = "1.4.0"
csv-async             = { version = "1.3.0", features = ["tokio"] }
opentelemetry         = { workspace = true }
opentelemetry-otlp    = { workspace = true }
opentelemetry_sdk     = { workspace = true }
tracing               = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-subscriber    = { workspace = true }
