[package]
name = "zmap-buddy"
description = "Best friend of ZMAP, nudging it to do the things we want"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
amqprs = { version = "1.2.0", features = ["traces", "urispec" ] }
anyhow = { workspace = true }
clap = { workspace = true }
clap-verbosity-flag = { workspace = true }
flexi_logger = { workspace = true }
futures = "0.3.28"
futures-util = "0.3.28"
human-panic = { workspace = true }
ipnet = "2.7.1"
log = { workspace = true }
prefix-crab = { path = ".." }
rand = "0.8.5"
tempfile = "3.5.0"
tokio = { version = "1.27.0", features = ["full"] }
tokio-stream = "0.1.12"
