[package]
name = "zmap-buddy"
description = "Best friend of ZMAP, nudging it to do the things we want"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
amqprs = { version = "1.2.0", features = ["traces", "urispec" ] }
anyhow = { workspace = true }
assertor = "0.0.2"
clap = { workspace = true }
clap-verbosity-flag = { workspace = true }
csv = "1.2.1"
flexi_logger = { workspace = true }
futures = "0.3.28"
futures-util = "0.3.28"
human-panic = { workspace = true }
ipnet = { workspace = true }
log = { workspace = true }
prefix-crab = { path = ".." }
rand = "0.8.5"
regex = "1.8.1"
serde = { version = "1.0.159", features = ["derive"] }
tempfile = "3.5.0"
tokio = { version = "1.27.0", features = ["full"] }
tokio-stream = "0.1.12"
queue-models = { path = "../queue-models" }
